2005-09-16  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* src/emit_functions.c (emit_emitter_func): Fix small bug on #define
	optimization.

2005-09-13  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* tests/Makefile.am: Add  monoburg$(EXEEXT) to the dependencies of
	.c files generated from .brg.

2005-09-12  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Bump to 1.0.3a.
	Check for Glib >= 2.6 (needed for GOptions).

2005-09-11  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* configure.ac,
	* NEWS: Bump to 1.0.3.

2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* configure.ac,
	* NEWS: Bump to 1.0.2b.

2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* src/monoburg.1: Remove. Move to...
	* man/monoburg.1: New. ... here and update.
	* src/Makefile.am: Delete man reference.
	* man/Makefile.am: New.	Created accordingly.
	* man: New. Man path.
	* configure.ac: Update accordingly.
	* Makefile.am: Update accordingly.

2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* tests/Makefile.am: Add test facilities.
	* tests/sample.c.ref: New. Add reference code for
	tests/sample.brg.
	

2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* src/emit.c,
	* src/rule.c,
	* src/emit_kids.c,
	* src/rule.h,
	* src/emit_files.c,
	* src/parser.y,
	* src/main.c,
	* src/emit_cost.c: Be consistent in memory use in order to erase
	memory leaks.

2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* src/monoburg.h: Add a `with_line' variable which tells if
	`#line' directives have to be output.
	* src/main.c (parse_options): Parse the option.
	* src/parser.y: Output `#line' directives accordingly.

2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* src/parser.h: Use `GList' for namespaces and include related
	features.
	* src/emit_files.c,
	* src/parser.y:,
	* src/main.c: Update accordingly.

2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
